Link para o GitHub.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 				<div id="result" ></div>
 			</div>
 		</div>
-
+		<br />
+		<br />
+		<a href="https://github.com/crisstanza/dojo-js-calculadora" target="_blank">github.com/crisstanza/dojo-js-calculadora</a>
 	</body>
 </html>
